--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ install_requires=
     coveralls
     sphinx
     sphinx_rtd_theme
-    tpPyUtils
+    tpDcc-libs-python
     gazu
     artellapipe
 
