--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,2 @@
 include artellapipe/libs/kitsu/__logging__.ini
-include artellapipe/libs/kitsu/resources/icons/color/*.*
-include artellapipe/libs/kitsu/resources/images/*.*
+recursive-include artellapipe/libs/kitsu/resources/* *.*
