--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,6 @@ name = artellapipe-libs-kitsu
 description = Library to handle Artella Project production tracking using Kitsu
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-version = attr: artellapipe.libs.kitsu.__version__.__version__
 license = MIT
 license_file = LICENSE
 author = Tomas Poveda
@@ -33,3 +32,11 @@ test =
 
 [bdist_wheel]
 universal=1
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = artellapipe/libs/kitsu/_version.py
+versionfile_build =
+tag_prefix =
+parentdir_prefix =
