--- a/setup.cfg
+++ b/setup.cfg
@@ -14,13 +14,8 @@ zip_safe = false
 include_package_data = true
 packages=find:
 install_requires=
-    pytest
-    pytest-cov
-    coveralls
-    sphinx
-    sphinx_rtd_theme
+    gazu==0.7.17
     tpDcc-libs-python
-    gazu
     artellapipe
 
 [options.extras_require]
